--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,15 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+
+#paris {
+    background-color: #FF530D;
+}
+
+#florida {
+    background-color: #FF0DFF;
+}
+
+#scotland {
+    background-color: #2873FF;
+}
